контроллер saveStage-а + сам файл

--- a/src/main/resources/fxml/saveStage.fxml
+++ b/src/main/resources/fxml/saveStage.fxml
@@ -12,27 +12,22 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.anime.controller.ExplorerController">
    <children>
       <MenuBar maxHeight="-Infinity" pickOnBounds="false" prefHeight="19.0" prefWidth="998.0">
         <menus>
-          <Menu mnemonicParsing="false" text="File">
+          <Menu fx:id="fileMenu" mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem mnemonicParsing="false" text="Add new" />
-              <MenuItem mnemonicParsing="false" text="Save As..." />
-                  <MenuItem mnemonicParsing="false" text="Import" />
-                  <MenuItem mnemonicParsing="false" text="Close" />
+                  <MenuItem fx:id="addNewMenuItem" mnemonicParsing="false" onAction="#addNewSavePoint" text="Add new" />
+              <MenuItem fx:id="SaveAsMenuItem" mnemonicParsing="false" onAction="#ExportSavePointsInFile" text="Save As..." />
+                  <MenuItem fx:id="ImportMenuItem" mnemonicParsing="false" onAction="#loadSavePointsFromFile" text="Import" />
+                  <MenuItem fx:id="CloseMenuItem" mnemonicParsing="false" onAction="#closeApp" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit" />
+          <Menu fx:id="helpMenu" mnemonicParsing="false" text="Help">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" text="About" />
+              <MenuItem fx:id="AboutMenuItem" mnemonicParsing="false" onAction="#getInfoAboutApp" text="About" />
             </items>
           </Menu>
         </menus>
