--- a/src/main/resources/fxml/saveStage.fxml
+++ b/src/main/resources/fxml/saveStage.fxml
@@ -1,40 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<?import org.anime.fxcomponent.FxSavePoint?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0"
-      prefWidth="666.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="org.anime.controller.ExplorerController">
+<VBox fx:id="explorerVBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="461.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.anime.controller.ExplorerController">
     <children>
         <MenuBar maxHeight="-Infinity" pickOnBounds="false" prefHeight="19.0" prefWidth="998.0">
             <menus>
                 <Menu fx:id="fileMenu" mnemonicParsing="false" text="File">
                     <items>
-                        <MenuItem fx:id="addNewMenuItem" mnemonicParsing="false" onAction="#addNewSavePoint"
-                                  text="Add new"/>
-                        <MenuItem fx:id="SaveAsMenuItem" mnemonicParsing="false" onAction="#ExportSavePointsInFile"
-                                  text="Save As..."/>
-                        <MenuItem fx:id="ImportMenuItem" mnemonicParsing="false" onAction="#loadSavePointsFromFile"
-                                  text="Import"/>
-                        <MenuItem fx:id="CloseMenuItem" mnemonicParsing="false" onAction="#closeApp" text="Close"/>
+                        <MenuItem fx:id="addNewMenuItem" mnemonicParsing="false" onAction="#addNewSavePoint" text="Add new" />
+                        <MenuItem fx:id="SaveAsMenuItem" mnemonicParsing="false" onAction="#ExportSavePointsInFile" text="Save As..." />
+                        <MenuItem fx:id="ImportMenuItem" mnemonicParsing="false" onAction="#loadSavePointsFromFile" text="Import" />
+                        <MenuItem fx:id="CloseMenuItem" mnemonicParsing="false" onAction="#closeApp" text="Close" />
                     </items>
                 </Menu>
-                <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit"/>
+                <Menu fx:id="editMenu" mnemonicParsing="false" text="Edit" />
                 <Menu fx:id="helpMenu" mnemonicParsing="false" text="Help">
                     <items>
-                        <MenuItem fx:id="AboutMenuItem" mnemonicParsing="false" onAction="#getInfoAboutApp"
-                                  text="About"/>
+                        <MenuItem fx:id="AboutMenuItem" mnemonicParsing="false" onAction="#getInfoAboutApp" text="About" />
                     </items>
                 </Menu>
             </menus>
